finished header design

--- a/index.html
+++ b/index.html
@@ -5,17 +5,31 @@
     <link rel="icon" href="./Assets/Images/eustace-400.webp" type="html-tab"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link href="https://db.onlinewebfonts.com/c/1e44faec07b8b81f60a3215d76bd0086?family=Irvin-Heading" rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/29e49f6f4a693b2e8b913296fa6afd37?family=Adobe+Caslon+Pro+Italic" rel="stylesheet">         
     <title>The Pressure Campaign to Confirm Pete Hegseth</title>
 </head>
 <body style="background-color: black;">
     <header class="header">
        <a href="https://www.newyorker.com"><img src="/Assets/Images/newyorkimage12.png" alt="The new yorker logo" width="150px" height="50px" class="logo"></a> 
-        <nav>
-            <a href="https://www.newyorker.com/newsletters?sourceCode=navbar" class="newsletter">Newsletter</a>
+        <nav class="navBar elementToHide">
+            <a href="https://www.newyorker.com/newsletters?sourceCode=navbar" class="newsletter" >Newsletter</a>
             <a href="https://id.condenast.com/interaction/qVdoH3cZkEB1GZ6wY1byE/email" class="SignIn">Sign In</a>
             <a href="https://www.newyorker.com/v2/offers/tny338" target="_blank" class="subscribeButton">Subscribe</a> 
-           <a href="https://www.newyorker.com/search"><img src="/Assets/Images/search.png" alt="search" width="47x" height="30px" class="search"></a>
+            <a href="https://www.newyorker.com/search" class="search"><img src="/Assets/Images/search.png" alt="search" width="45px" height="30px" ></a>
         </nav>
+        <img src="/Assets/Images/dropMenu.png" alt="dropMenu" class="dropMenu elementToShow">
+        <div class="leftHeadDiv">
+            <a href="https://www.newyorker.com/the-lede" class="theLedeStyle">THE LEDE</a>
+            <p class="headerText">THE PRESSURE <br>CAMPAIGN TO GET <br>PETE HEGSETH <br> CONFIRMED AS <br> DEFENSE SECRETARY</p>
+            <p class="subheaderText"> <i>Supporters of Donald Trump’s nominee have intimidated <br> potential witnesses and suppressed the F.B.I. 
+                background check <br> of the former Fox News host in the run-up to his Senate <br> hearing.</i></p>
+            <p class="author">By&nbsp;<a href="https://www.newyorker.com/contributors/jane-mayer" class="authorLink"> Jane Mayer</a></p>
+            <p class="date">January 13,2025</p>
+        </div>
+        <div class="rightHeadDiv">
+            <img src="/Assets/Images/Mayer-Hegseth.webp" alt="picture of Pete Hegseth" class="headerImage">
+        </div>
     </header>
     
 </body>
