finished header, all of its design and responsivness

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body style="background-color: black;">
     <header class="header">
-       <a href="https://www.newyorker.com"><img src="/Assets/Images/newyorkimage12.png" alt="The new yorker logo" width="150px" height="50px" class="logo"></a> 
+       <a href="https://www.newyorker.com"><img src="/Assets/Images/newyorkimage12.png" alt="The new yorker logo" class="logo" height="50px" width="150px"></a> 
         <nav class="navBar elementToHide">
             <a href="https://www.newyorker.com/newsletters?sourceCode=navbar" class="newsletter" >Newsletter</a>
             <a href="https://id.condenast.com/interaction/qVdoH3cZkEB1GZ6wY1byE/email" class="SignIn">Sign In</a>
@@ -21,9 +21,13 @@
         <img src="/Assets/Images/dropMenu.png" alt="dropMenu" class="dropMenu elementToShow">
         <div class="leftHeadDiv">
             <a href="https://www.newyorker.com/the-lede" class="theLedeStyle">THE LEDE</a>
-            <p class="headerText">THE PRESSURE <br>CAMPAIGN TO GET <br>PETE HEGSETH <br> CONFIRMED AS <br> DEFENSE SECRETARY</p>
-            <p class="subheaderText"> <i>Supporters of Donald Trump’s nominee have intimidated <br> potential witnesses and suppressed the F.B.I. 
-                background check <br> of the former Fox News host in the run-up to his Senate <br> hearing.</i></p>
+            <div class="headerDiv">
+                <p class="headerText">THE PRESSURE CAMPAIGN TO GET PETE HEGSETH CONFIRMED AS DEFENSE SECRETARY</p>
+            </div>
+            <div class="subheaderDiv">
+                <p class="subheaderText"> <i>Supporters of Donald Trump’s nominee have intimidated potential witnesses and suppressed the F.B.I. 
+                    background check of the former Fox News host in the run-up to his Senate hearing.</i></p>
+            </div>
             <p class="author">By&nbsp;<a href="https://www.newyorker.com/contributors/jane-mayer" class="authorLink"> Jane Mayer</a></p>
             <p class="date">January 13,2025</p>
         </div>
