add last article section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,25 @@
                <a href="https://www.newyorker.com/newsletter/daily" class="userAgreement">Sign up for our daily newsletter</a> to receive the best stories from <i>The New Yorker</i>.
             </p>
         </section>
+        <section class="mainSection4">
+            <figure class="JaneMayerImgDiv">
+                <img src="/Assets/Images/mayer-jane.webp" alt="picture of Jane Mayer" class="JaneMayerImg">
+                <figcaption class="mainSectionText4">
+                   <i>
+                    <a href="https://www.newyorker.com/contributors/jane-mayer" class="userAgreement">Jane Mayer</a>, The New Yorker’s chief Washington correspondent,
+                    is the author of <a href="https://www.amazon.com/Dark-Money-History-Billionaires-Radical/dp/0307947904" class="userAgreement">“Dark Money”</a> 
+                    and the winner of Peabody and Emmy awards for her reporting in Frontline’s 2023 documentary “Clarence and Ginni: Politics, 
+                    Power and the Supreme Court.”
+                   </i> 
+                </figcaption>
+            </figure>
+            <div class="moreSection">
+                <span class="moreLabel">More:</span>
+                <a href="https://www.newyorker.com/tag/donald-trump" class="moreLink">Donald Trump</a>
+                <a href="https://www.newyorker.com/tag/confirmation-hearings" class="moreLink">Confirmation Hearings</a>
+                <a href="https://www.newyorker.com/tag/senate-republicans" class="moreLink">Senate Republicans</a> 
+            </div>
+        </section>
     </main>
     
 </body>
