--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 <p class="reminderText">
                     The latest from Washington and beyond, covering current events, the economy, and more, from our columnists and correspondents.
                 </p>
-                <input type="" name="" class="inputBox">
-                <button class="SignUpButton1">
-                    Sign Up
-                </button>
+                <div class="inputWrapper">
+                    <input type="text" class="inputBox" placeholder="">
+                    <button class="SignUpButton1">Sign Up</button>
+                </div>                
                 <p class="termsOfCondtions">
                     By signing up, you agree to our <a href="https://www.condenast.com/user-agreement" target="_blank" class="userAgreement"> user agreement</a>
                     (including <a href="https://www.condenast.com/user-agreement#introduction-arbitration-notice" class="userAgreement">class action waiver and arbitration provisions</a>), 
@@ -153,7 +153,7 @@
                         </div>
                       
                         <div class="footerMore1">
-                          <h4  style="margin-bottom: 5px;">More</h4>
+                          <h4  class="MoreText">More</h4>
                           <a href="https://www.newyorker.com/account/profile" target="_blank">Manage Account</a>
                           <a href="https://store.newyorker.com/" target="_blank">Shop The New Yorker</a>
                           <a href="https://condenaststore.com/art/new+yorker+covers" target="_blank">Buy Covers and Cartoons</a>
@@ -211,8 +211,8 @@
                           </div>
                         </div>
                       </div>
-                    </div>
-             </footer>
+             </div>
+        </footer>
         
     </body>
     </html>
